src/CodeSharper.Interpreter/Grammar/CodeQueryParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.5
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from D:/Development/Projects/antlr/CodeSharper-grammars/src/CodeQuery/v2\CodeQuery.g4 by ANTLR 4.5

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591

using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;

namespace CodeSharper.Interpreter.Grammar
{
    [System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.5")]
    [System.CLSCompliant(false)]
    public partial class CodeQuery : Parser {
        public const int
            LEFT_BRACKET=1, RIGHT_BRACKET=2, LEFT_SQUARE_BRACKET=3, RIGHT_SQUARE_BRACKET=4, 
            NUMBER=5, BOOLEAN=6, STRING=7, ID=8, SELECTOR_OPERATOR=9, UNIVERSAL_SELECTOR=10, 
            DOT=11, COLON=12, COMMA=13, REGULAR_EXPRESSION=14, METHOD_CALL_SYMBOL=15, 
            ASSIGNMENT_OPERATOR=16, COMMAND_OPERATOR=17, WHITESPACE=18;
        public const int
            RULE_command = 0, RULE_expression = 1, RULE_methodCall = 2, RULE_methodCallParameter = 3, 
            RULE_selector = 4, RULE_selectableElement = 5, RULE_className = 6, RULE_pseudoSelector = 7, 
            RULE_selectorAttribute = 8, RULE_constant = 9;
        public static readonly string[] ruleNames = {
            "command", "expression", "methodCall", "methodCallParameter", "selector", 
            "selectableElement", "className", "pseudoSelector", "selectorAttribute", 
            "constant"
        };

        private static readonly string[] _LiteralNames = {
            null, "'('", "')'", "'['", "']'", null, null, null, null, null, "'*'", 
            "'.'", "':'", "','", null, "'@'", "'='"
        };
        private static readonly string[] _SymbolicNames = {
            null, "LEFT_BRACKET", "RIGHT_BRACKET", "LEFT_SQUARE_BRACKET", "RIGHT_SQUARE_BRACKET", 
            "NUMBER", "BOOLEAN", "STRING", "ID", "SELECTOR_OPERATOR", "UNIVERSAL_SELECTOR", 
            "DOT", "COLON", "COMMA", "REGULAR_EXPRESSION", "METHOD_CALL_SYMBOL", "ASSIGNMENT_OPERATOR", 
            "COMMAND_OPERATOR", "WHITESPACE"
        };
        public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

        [NotNull]
        public override IVocabulary Vocabulary
        {
            get
            {
                return DefaultVocabulary;
            }
        }

        public override string GrammarFileName { get { return "CodeQuery.g4"; } }

        public override string[] RuleNames { get { return ruleNames; } }

        public override string SerializedAtn { get { return _serializedATN; } }

        public CodeQuery(ITokenStream input)
            : base(input)
        {
            Interpreter = new ParserATNSimulator(this,_ATN);
        }
        public partial class CommandContext : ParserRuleContext {
            public CommandContext(ParserRuleContext parent, int invokingState)
                : base(parent, invokingState)
            {
            }
            public override int RuleIndex { get { return RULE_command; } }
	 
            public CommandContext() { }
            public virtual void CopyFrom(CommandContext context) {
                base.CopyFrom(context);
            }
        }
        public partial class CommandOperandContext : CommandContext {
            public CommandContext Left;
            public IToken Operator;
            public CommandContext Right;
            public CommandContext[] command() {
                return GetRuleContexts<CommandContext>();
            }
            public CommandContext command(int i) {
                return GetRuleContext<CommandContext>(i);
            }
            public ITerminalNode COMMAND_OPERATOR() { return GetToken(CodeQuery.COMMAND_OPERATOR, 0); }
            public CommandOperandContext(CommandContext context) { CopyFrom(context); }
            public override void EnterRule(IParseTreeListener listener) {
                ICodeQueryListener typedListener = listener as ICodeQueryListener;
                if (typedListener != null) typedListener.EnterCommandOperand(this);
            }
            public override void ExitRule(IParseTreeListener listener) {
                ICodeQueryListener typedListener = listener as ICodeQueryListener;
                if (typedListener != null) typedListener.ExitCommandOperand(this);
            }
            public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
                ICodeQueryVisitor<TResult> typedVisitor = visitor as ICodeQueryVisitor<TResult>;
                if (typedVisitor != null) return typedVisitor.VisitCommandOperand(this);
                else return visitor.VisitChildren(this);
            }
        }
        public partial class CommandInnerContext : CommandContext {
            public CommandContext Command;
            public ITerminalNode LEFT_BRACKET() { return GetToken(CodeQuery.LEFT_BRACKET, 0); }
            public ITerminalNode RIGHT_BRACKET() { return GetToken(CodeQuery.RIGHT_BRACKET, 0); }
            public CommandContext command() {
                return GetRuleContext<CommandContext>(0);
            }
            public CommandInnerContext(CommandContext context) { CopyFrom(context); }
            public override void EnterRule(IParseTreeListener listener) {
                ICodeQueryListener typedListener = listener as ICodeQueryListener;
                if (typedListener != null) typedListener.EnterCommandInner(this);
            }
            public override void ExitRule(IParseTreeListener listener) {
                ICodeQueryListener typedListener = listener as ICodeQueryListener;
                if (typedListener != null) typedListener.ExitCommandInner(this);
            }
            public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
                ICodeQueryVisitor<TResult> typedVisitor = visitor as ICodeQueryVisitor<TResult>;
                if (typedVisitor != null) return typedVisitor.VisitCommandInner(this);
                else return visitor.VisitChildren(this);
            }
        }
        public partial class CommandExpressionContext : CommandContext {
            public ExpressionContext Expression;
            public ExpressionContext expression() {
                return GetRuleContext<ExpressionContext>(0);
            }
            public CommandExpressionContext(CommandContext context) { CopyFrom(context); }
            public override void EnterRule(IParseTreeListener listener) {
                ICodeQueryListener typedListener = listener as ICodeQueryListener;
                if (typedListener != null) typedListener.EnterCommandExpression(this);
            }
            public override void ExitRule(IParseTreeListener listener) {
                ICodeQueryListener typedListener = listener as ICodeQueryListener;
                if (typedListener != null) typedListener.ExitCommandExpression(this);
            }
            public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
                ICodeQueryVisitor<TResult> typedVisitor = visitor as ICodeQueryVisitor<TResult>;
                if (typedVisitor != null) return typedVisitor.VisitCommandExpression(this);
                else return visitor.VisitChildren(this);
            }
        }

        [RuleVersion(0)]
        public CommandContext command() {
            return command(0);
        }

        private CommandContext command(int _p) {
            ParserRuleContext _parentctx = Context;
            int _parentState = State;
            CommandContext _localctx = new CommandContext(Context, _parentState);
            CommandContext _prevctx = _localctx;
            int _startState = 0;
            EnterRecursionRule(_localctx, 0, RULE_command, _p);
            try {
                int _alt;
                EnterOuterAlt(_localctx, 1);
                {
                    State = 26;
                    switch (TokenStream.La(1)) {
                        case LEFT_BRACKET:
                        {
                            _localctx = new CommandInnerContext(_localctx);
                            Context = _localctx;
                            _prevctx = _localctx;

                            State = 21; Match(LEFT_BRACKET);
                            State = 22; ((CommandInnerContext)_localctx).Command = command(0);
                            State = 23; Match(RIGHT_BRACKET);
                        }
                            break;
                        case LEFT_SQUARE_BRACKET:
                        case ID:
                        {
                            _localctx = new CommandExpressionContext(_localctx);
                            Context = _localctx;
                            _prevctx = _localctx;
                            State = 25; ((CommandExpressionContext)_localctx).Expression = expression();
                        }
                            break;
                        default:
                            throw new NoViableAltException(this);
                    }
                    Context.Stop = TokenStream.Lt(-1);
                    State = 33;
                    ErrorHandler.Sync(this);
                    _alt = Interpreter.AdaptivePredict(TokenStream,1,Context);
                    while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.InvalidAltNumber ) {
                        if ( _alt==1 ) {
                            if ( ParseListeners!=null ) 
                                TriggerExitRuleEvent();
                            _prevctx = _localctx;
                            {
                                {
                                    _localctx = new CommandOperandContext(new CommandContext(_parentctx, _parentState));
                                    ((CommandOperandContext)_localctx).Left = _prevctx;
                                    PushNewRecursionContext(_localctx, _startState, RULE_command);
                                    State = 28;
                                    if (!(Precpred(Context, 3))) throw new FailedPredicateException(this, "Precpred(Context, 3)");
                                    State = 29; ((CommandOperandContext)_localctx).Operator = Match(COMMAND_OPERATOR);
                                    State = 30; ((CommandOperandContext)_localctx).Right = command(4);
                                }
                            } 
                        }
                        State = 35;
                        ErrorHandler.Sync(this);
                        _alt = Interpreter.AdaptivePredict(TokenStream,1,Context);
                    }
                }
            }
            catch (RecognitionException re) {
                _localctx.exception = re;
                ErrorHandler.ReportError(this, re);
                ErrorHandler.Recover(this, re);
            }
            finally {
                UnrollRecursionContexts(_parentctx);
            }
            return _localctx;
        }

        public partial class ExpressionContext : ParserRuleContext {
            public ExpressionContext(ParserRuleContext parent, int invokingState)
                : base(parent, invokingState)
            {
            }
            public override int RuleIndex { get { return RULE_expression; } }
	 
            public ExpressionContext() { }
            public virtual void CopyFrom(ExpressionContext context) {
                base.CopyFrom(context);
            }
        }
        public partial class ExpressionSelectorContext : ExpressionContext {
            public ITerminalNode LEFT_SQUARE_BRACKET() { return GetToken(CodeQuery.LEFT_SQUARE_BRACKET, 0); }
            public SelectorContext selector() {
                return GetRuleContext<SelectorContext>(0);
            }
            public ITerminalNode RIGHT_SQUARE_BRACKET() { return GetToken(CodeQuery.RIGHT_SQUARE_BRACKET, 0); }
            public ExpressionSelectorContext(ExpressionContext context) { CopyFrom(context); }
            public override void EnterRule(IParseTreeListener listener) {
                ICodeQueryListener typedListener = listener as ICodeQueryListener;
                if (typedListener != null) typedListener.EnterExpressionSelector(this);
            }
            public override void ExitRule(IParseTreeListener listener) {
                ICodeQueryListener typedListener = listener as ICodeQueryListener;
                if (typedListener != null) typedListener.ExitExpressionSelector(this);
            }
            public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
                ICodeQueryVisitor<TResult> typedVisitor = visitor as ICodeQueryVisitor<TResult>;
                if (typedVisitor != null) return typedVisitor.VisitExpressionSelector(this);
                else return visitor.VisitChildren(this);
            }
        }
        public partial class ExpressionMethodCallContext : ExpressionContext {
            public MethodCallContext methodCall() {
                return GetRuleContext<MethodCallContext>(0);
            }
            public ExpressionMethodCallContext(ExpressionContext context) { CopyFrom(context); }
            public override void EnterRule(IParseTreeListener listener) {
                ICodeQueryListener typedListener = listener as ICodeQueryListener;
                if (typedListener != null) typedListener.EnterExpressionMethodCall(this);
            }
            public override void ExitRule(IParseTreeListener listener) {
                ICodeQueryListener typedListener = listener as ICodeQueryListener;
                if (typedListener != null) typedListener.ExitExpressionMethodCall(this);
            }
            public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
                ICodeQueryVisitor<TResult> typedVisitor = visitor as ICodeQueryVisitor<TResult>;
                if (typedVisitor != null) return typedVisitor.VisitExpressionMethodCall(this);
                else return visitor.VisitChildren(this);
            }
        }

        [RuleVersion(0)]
        public ExpressionContext expression() {
            ExpressionContext _localctx = new ExpressionContext(Context, State);
            EnterRule(_localctx, 2, RULE_expression);
            try {
                State = 41;
                switch (TokenStream.La(1)) {
                    case ID:
                        _localctx = new ExpressionMethodCallContext(_localctx);
                        EnterOuterAlt(_localctx, 1);
                    {
                        State = 36; methodCall();
                    }
                        break;
                    case LEFT_SQUARE_BRACKET:
                        _localctx = new ExpressionSelectorContext(_localctx);
                        EnterOuterAlt(_localctx, 2);
                    {
                        State = 37; Match(LEFT_SQUARE_BRACKET);
                        State = 38; selector(0);
                        State = 39; Match(RIGHT_SQUARE_BRACKET);
                    }
                        break;
                    default:
                        throw new NoViableAltException(this);
                }
            }
            catch (RecognitionException re) {
                _localctx.exception = re;
                ErrorHandler.ReportError(this, re);
                ErrorHandler.Recover(this, re);
            }
            finally {
                ExitRule();
            }
            return _localctx;
        }

        public partial class MethodCallContext : ParserRuleContext {
            public IToken MethodCallName;
            public MethodCallParameterContext MethodCallParameter;
            public ITerminalNode ID() { return GetToken(CodeQuery.ID, 0); }
            public MethodCallParameterContext[] methodCallParameter() {
                return GetRuleContexts<MethodCallParameterContext>();
            }
            public MethodCallParameterContext methodCallParameter(int i) {
                return GetRuleContext<MethodCallParameterContext>(i);
            }
            public MethodCallContext(ParserRuleContext parent, int invokingState)
                : base(parent, invokingState)
            {
            }
            public override int RuleIndex { get { return RULE_methodCall; } }
            public override void EnterRule(IParseTreeListener listener) {
                ICodeQueryListener typedListener = listener as ICodeQueryListener;
                if (typedListener != null) typedListener.EnterMethodCall(this);
            }
            public override void ExitRule(IParseTreeListener listener) {
                ICodeQueryListener typedListener = listener as ICodeQueryListener;
                if (typedListener != null) typedListener.ExitMethodCall(this);
            }
            public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
                ICodeQueryVisitor<TResult> typedVisitor = visitor as ICodeQueryVisitor<TResult>;
                if (typedVisitor != null) return typedVisitor.VisitMethodCall(this);
                else return visitor.VisitChildren(this);
            }
        }

        [RuleVersion(0)]
        public MethodCallContext methodCall() {
            MethodCallContext _localctx = new MethodCallContext(Context, State);
            EnterRule(_localctx, 4, RULE_methodCall);
            try {
                int _alt;
                EnterOuterAlt(_localctx, 1);
                {
                    State = 43; _localctx.MethodCallName = Match(ID);
                    State = 47;
                    ErrorHandler.Sync(this);
                    _alt = Interpreter.AdaptivePredict(TokenStream,3,Context);
                    while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.InvalidAltNumber ) {
                        if ( _alt==1 ) {
                            {
                                {
                                    State = 44; _localctx.MethodCallParameter = methodCallParameter();
                                }
                            } 
                        }
                        State = 49;
                        ErrorHandler.Sync(this);
                        _alt = Interpreter.AdaptivePredict(TokenStream,3,Context);
                    }
                }
            }
            catch (RecognitionException re) {
                _localctx.exception = re;
                ErrorHandler.ReportError(this, re);
                ErrorHandler.Recover(this, re);
            }
            finally {
                ExitRule();
            }
            return _localctx;
        }

        public partial class MethodCallParameterContext : ParserRuleContext {
            public MethodCallParameterContext(ParserRuleContext parent, int invokingState)
                : base(parent, invokingState)
            {
            }
            public override int RuleIndex { get { return RULE_methodCallParameter; } }
	 
            public MethodCallParameterContext() { }
            public virtual void CopyFrom(MethodCallParameterContext context) {
                base.CopyFrom(context);
            }
        }
        public partial class MethodCallParameterValueWithExpressionContext : MethodCallParameterContext {
            public IToken ParameterName;
            public ExpressionContext ActualParameterValue;
            public ExpressionContext expression() {
                return GetRuleContext<ExpressionContext>(0);
            }
            public ITerminalNode ASSIGNMENT_OPERATOR() { return GetToken(CodeQuery.ASSIGNMENT_OPERATOR, 0); }
            public ITerminalNode ID() { return GetToken(CodeQuery.ID, 0); }
            public MethodCallParameterValueWithExpressionContext(MethodCallParameterContext context) { CopyFrom(context); }
            public override void EnterRule(IParseTreeListener listener) {
                ICodeQueryListener typedListener = listener as ICodeQueryListener;
                if (typedListener != null) typedListener.EnterMethodCallParameterValueWithExpression(this);
            }
            public override void ExitRule(IParseTreeListener listener) {
                ICodeQueryListener typedListener = listener as ICodeQueryListener;
                if (typedListener != null) typedListener.ExitMethodCallParameterValueWithExpression(this);
            }
            public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
                ICodeQueryVisitor<TResult> typedVisitor = visitor as ICodeQueryVisitor<TResult>;
                if (typedVisitor != null) return typedVisitor.VisitMethodCallParameterValueWithExpression(this);
                else return visitor.VisitChildren(this);
            }
        }
        public partial class MethodCallParameterValueWithIdentifierContext : MethodCallParameterContext {
            public IToken ParameterName;
            public IToken ActualParameterValue;
            public ITerminalNode[] ID() { return GetTokens(CodeQuery.ID); }
            public ITerminalNode ID(int i) {
                return GetToken(CodeQuery.ID, i);
            }
            public ITerminalNode ASSIGNMENT_OPERATOR() { return GetToken(CodeQuery.ASSIGNMENT_OPERATOR, 0); }
            public MethodCallParameterValueWithIdentifierContext(MethodCallParameterContext context) { CopyFrom(context); }
            public override void EnterRule(IParseTreeListener listener) {
                ICodeQueryListener typedListener = listener as ICodeQueryListener;
                if (typedListener != null) typedListener.EnterMethodCallParameterValueWithIdentifier(this);
            }
            public override void ExitRule(IParseTreeListener listener) {
                ICodeQueryListener typedListener = listener as ICodeQueryListener;
                if (typedListener != null) typedListener.ExitMethodCallParameterValueWithIdentifier(this);
            }
            public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
                ICodeQueryVisitor<TResult> typedVisitor = visitor as ICodeQueryVisitor<TResult>;
                if (typedVisitor != null) return typedVisitor.VisitMethodCallParameterValueWithIdentifier(this);
                else return visitor.VisitChildren(this);
            }
        }
        public partial class MethodCallParameterValueWithConstantContext : MethodCallParameterContext {
            public IToken ParameterName;
            public ConstantContext ActualParameterValue;
            public ConstantContext constant() {
                return GetRuleContext<ConstantContext>(0);
            }
            public ITerminalNode ASSIGNMENT_OPERATOR() { return GetToken(CodeQuery.ASSIGNMENT_OPERATOR, 0); }
            public ITerminalNode ID() { return GetToken(CodeQuery.ID, 0); }
            public MethodCallParameterValueWithConstantContext(MethodCallParameterContext context) { CopyFrom(context); }
            public override void EnterRule(IParseTreeListener listener) {
                ICodeQueryListener typedListener = listener as ICodeQueryListener;
                if (typedListener != null) typedListener.EnterMethodCallParameterValueWithConstant(this);
            }
            public override void ExitRule(IParseTreeListener listener) {
                ICodeQueryListener typedListener = listener as ICodeQueryListener;
                if (typedListener != null) typedListener.ExitMethodCallParameterValueWithConstant(this);
            }
            public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
                ICodeQueryVisitor<TResult> typedVisitor = visitor as ICodeQueryVisitor<TResult>;
                if (typedVisitor != null) return typedVisitor.VisitMethodCallParameterValueWithConstant(this);
                else return visitor.VisitChildren(this);
            }
        }

        [RuleVersion(0)]
        public MethodCallParameterContext methodCallParameter() {
            MethodCallParameterContext _localctx = new MethodCallParameterContext(Context, State);
            EnterRule(_localctx, 6, RULE_methodCallParameter);
            int _la;
            try {
                State = 65;
                switch ( Interpreter.AdaptivePredict(TokenStream,7,Context) ) {
                    case 1:
                        _localctx = new MethodCallParameterValueWithExpressionContext(_localctx);
                        EnterOuterAlt(_localctx, 1);
                    {
                        State = 52;
                        switch ( Interpreter.AdaptivePredict(TokenStream,4,Context) ) {
                            case 1:
                            {
                                State = 50; ((MethodCallParameterValueWithExpressionContext)_localctx).ParameterName = Match(ID);
                                State = 51; Match(ASSIGNMENT_OPERATOR);
                            }
                                break;
                        }
                        State = 54; ((MethodCallParameterValueWithExpressionContext)_localctx).ActualParameterValue = expression();
                    }
                        break;
                    case 2:
                        _localctx = new MethodCallParameterValueWithConstantContext(_localctx);
                        EnterOuterAlt(_localctx, 2);
                    {
                        State = 57;
                        _la = TokenStream.La(1);
                        if (_la==ID) {
                            {
                                State = 55; ((MethodCallParameterValueWithConstantContext)_localctx).ParameterName = Match(ID);
                                State = 56; Match(ASSIGNMENT_OPERATOR);
                            }
                        }

                        State = 59; ((MethodCallParameterValueWithConstantContext)_localctx).ActualParameterValue = constant();
                    }
                        break;
                    case 3:
                        _localctx = new MethodCallParameterValueWithIdentifierContext(_localctx);
                        EnterOuterAlt(_localctx, 3);
                    {
                        State = 62;
                        switch ( Interpreter.AdaptivePredict(TokenStream,6,Context) ) {
                            case 1:
                            {
                                State = 60; ((MethodCallParameterValueWithIdentifierContext)_localctx).ParameterName = Match(ID);
                                State = 61; Match(ASSIGNMENT_OPERATOR);
                            }
                                break;
                        }
                        State = 64; ((MethodCallParameterValueWithIdentifierContext)_localctx).ActualParameterValue = Match(ID);
                    }
                        break;
                }
            }
            catch (RecognitionException re) {
                _localctx.exception = re;
                ErrorHandler.ReportError(this, re);
                ErrorHandler.Recover(this, re);
            }
            finally {
                ExitRule();
            }
            return _localctx;
        }

        public partial class SelectorContext : ParserRuleContext {
            public SelectorContext(ParserRuleContext parent, int invokingState)
                : base(parent, invokingState)
            {
            }
            public override int RuleIndex { get { return RULE_selector; } }
	 
            public SelectorContext() { }
            public virtual void CopyFrom(SelectorContext context) {
                base.CopyFrom(context);
            }
        }
        public partial class UnarySelectionContext : SelectorContext {
            public SelectableElementContext Value;
            public SelectableElementContext selectableElement() {
                return GetRuleContext<SelectableElementContext>(0);
            }
            public UnarySelectionContext(SelectorContext context) { CopyFrom(context); }
            public override void EnterRule(IParseTreeListener listener) {
                ICodeQueryListener typedListener = listener as ICodeQueryListener;
                if (typedListener != null) typedListener.EnterUnarySelection(this);
            }
            public override void ExitRule(IParseTreeListener listener) {
                ICodeQueryListener typedListener = listener as ICodeQueryListener;
                if (typedListener != null) typedListener.ExitUnarySelection(this);
            }
            public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
                ICodeQueryVisitor<TResult> typedVisitor = visitor as ICodeQueryVisitor<TResult>;
                if (typedVisitor != null) return typedVisitor.VisitUnarySelection(this);
                else return visitor.VisitChildren(this);
            }
        }
        public partial class BinarySelectionContext : SelectorContext {
            public SelectorContext Left;
            public IToken SelectorOperator;
            public SelectorContext Right;
            public SelectorContext[] selector() {
                return GetRuleContexts<SelectorContext>();
            }
            public SelectorContext selector(int i) {
                return GetRuleContext<SelectorContext>(i);
            }
            public ITerminalNode SELECTOR_OPERATOR() { return GetToken(CodeQuery.SELECTOR_OPERATOR, 0); }
            public BinarySelectionContext(SelectorContext context) { CopyFrom(context); }
            public override void EnterRule(IParseTreeListener listener) {
                ICodeQueryListener typedListener = listener as ICodeQueryListener;
                if (typedListener != null) typedListener.EnterBinarySelection(this);
            }
            public override void ExitRule(IParseTreeListener listener) {
                ICodeQueryListener typedListener = listener as ICodeQueryListener;
                if (typedListener != null) typedListener.ExitBinarySelection(this);
            }
            public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
                ICodeQueryVisitor<TResult> typedVisitor = visitor as ICodeQueryVisitor<TResult>;
                if (typedVisitor != null) return typedVisitor.VisitBinarySelection(this);
                else return visitor.VisitChildren(this);
            }
        }
        public partial class SelectionWithParenthesisContext : SelectorContext {
            public SelectorContext Selector;
            public ITerminalNode LEFT_BRACKET() { return GetToken(CodeQuery.LEFT_BRACKET, 0); }
            public ITerminalNode RIGHT_BRACKET() { return GetToken(CodeQuery.RIGHT_BRACKET, 0); }
            public SelectorContext selector() {
                return GetRuleContext<SelectorContext>(0);
            }
            public SelectionWithParenthesisContext(SelectorContext context) { CopyFrom(context); }
            public override void EnterRule(IParseTreeListener listener) {
                ICodeQueryListener typedListener = listener as ICodeQueryListener;
                if (typedListener != null) typedListener.EnterSelectionWithParenthesis(this);
            }
            public override void ExitRule(IParseTreeListener listener) {
                ICodeQueryListener typedListener = listener as ICodeQueryListener;
                if (typedListener != null) typedListener.ExitSelectionWithParenthesis(this);
            }
            public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
                ICodeQueryVisitor<TResult> typedVisitor = visitor as ICodeQueryVisitor<TResult>;
                if (typedVisitor != null) return typedVisitor.VisitSelectionWithParenthesis(this);
                else return visitor.VisitChildren(this);
            }
        }

        [RuleVersion(0)]
        public SelectorContext selector() {
            return selector(0);
        }

        private SelectorContext selector(int _p) {
            ParserRuleContext _parentctx = Context;
            int _parentState = State;
            SelectorContext _localctx = new SelectorContext(Context, _parentState);
            SelectorContext _prevctx = _localctx;
            int _startState = 8;
            EnterRecursionRule(_localctx, 8, RULE_selector, _p);
            int _la;
            try {
                int _alt;
                EnterOuterAlt(_localctx, 1);
                {
                    State = 73;
                    switch (TokenStream.La(1)) {
                        case ID:
                        case UNIVERSAL_SELECTOR:
                        case DOT:
                        {
                            _localctx = new UnarySelectionContext(_localctx);
                            Context = _localctx;
                            _prevctx = _localctx;

                            State = 68; ((UnarySelectionContext)_localctx).Value = selectableElement();
                        }
                            break;
                        case LEFT_BRACKET:
                        {
                            _localctx = new SelectionWithParenthesisContext(_localctx);
                            Context = _localctx;
                            _prevctx = _localctx;
                            State = 69; Match(LEFT_BRACKET);
                            State = 70; ((SelectionWithParenthesisContext)_localctx).Selector = selector(0);
                            State = 71; Match(RIGHT_BRACKET);
                        }
                            break;
                        default:
                            throw new NoViableAltException(this);
                    }
                    Context.Stop = TokenStream.Lt(-1);
                    State = 82;
                    ErrorHandler.Sync(this);
                    _alt = Interpreter.AdaptivePredict(TokenStream,10,Context);
                    while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.InvalidAltNumber ) {
                        if ( _alt==1 ) {
                            if ( ParseListeners!=null ) 
                                TriggerExitRuleEvent();
                            _prevctx = _localctx;
                            {
                                {
                                    _localctx = new BinarySelectionContext(new SelectorContext(_parentctx, _parentState));
                                    ((BinarySelectionContext)_localctx).Left = _prevctx;
                                    PushNewRecursionContext(_localctx, _startState, RULE_selector);
                                    State = 75;
                                    if (!(Precpred(Context, 2))) throw new FailedPredicateException(this, "Precpred(Context, 2)");
                                    State = 77;
                                    _la = TokenStream.La(1);
                                    if (_la==SELECTOR_OPERATOR) {
                                        {
                                            State = 76; ((BinarySelectionContext)_localctx).SelectorOperator = Match(SELECTOR_OPERATOR);
                                        }
                                    }

                                    State = 79; ((BinarySelectionContext)_localctx).Right = selector(2);
                                }
                            } 
                        }
                        State = 84;
                        ErrorHandler.Sync(this);
                        _alt = Interpreter.AdaptivePredict(TokenStream,10,Context);
                    }
                }
            }
            catch (RecognitionException re) {
                _localctx.exception = re;
                ErrorHandler.ReportError(this, re);
                ErrorHandler.Recover(this, re);
            }
            finally {
                UnrollRecursionContexts(_parentctx);
            }
            return _localctx;
        }

        public partial class SelectableElementContext : ParserRuleContext {
            public IToken ElementName;
            public ClassNameContext ClassNames;
            public SelectorAttributeContext SelectorAttributes;
            public PseudoSelectorContext PseudoSelectors;
            public ITerminalNode ID() { return GetToken(CodeQuery.ID, 0); }
            public ITerminalNode UNIVERSAL_SELECTOR() { return GetToken(CodeQuery.UNIVERSAL_SELECTOR, 0); }
            public ITerminalNode DOT() { return GetToken(CodeQuery.DOT, 0); }
            public ClassNameContext[] className() {
                return GetRuleContexts<ClassNameContext>();
            }
            public ClassNameContext className(int i) {
                return GetRuleContext<ClassNameContext>(i);
            }
            public SelectorAttributeContext[] selectorAttribute() {
                return GetRuleContexts<SelectorAttributeContext>();
            }
            public SelectorAttributeContext selectorAttribute(int i) {
                return GetRuleContext<SelectorAttributeContext>(i);
            }
            public PseudoSelectorContext[] pseudoSelector() {
                return GetRuleContexts<PseudoSelectorContext>();
            }
            public PseudoSelectorContext pseudoSelector(int i) {
                return GetRuleContext<PseudoSelectorContext>(i);
            }
            public SelectableElementContext(ParserRuleContext parent, int invokingState)
                : base(parent, invokingState)
            {
            }
            public override int RuleIndex { get { return RULE_selectableElement; } }
            public override void EnterRule(IParseTreeListener listener) {
                ICodeQueryListener typedListener = listener as ICodeQueryListener;
                if (typedListener != null) typedListener.EnterSelectableElement(this);
            }
            public override void ExitRule(IParseTreeListener listener) {
                ICodeQueryListener typedListener = listener as ICodeQueryListener;
                if (typedListener != null) typedListener.ExitSelectableElement(this);
            }
            public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
                ICodeQueryVisitor<TResult> typedVisitor = visitor as ICodeQueryVisitor<TResult>;
                if (typedVisitor != null) return typedVisitor.VisitSelectableElement(this);
                else return visitor.VisitChildren(this);
            }
        }

        [RuleVersion(0)]
        public SelectableElementContext selectableElement() {
            SelectableElementContext _localctx = new SelectableElementContext(Context, State);
            EnterRule(_localctx, 10, RULE_selectableElement);
            int _la;
            try {
                int _alt;
                EnterOuterAlt(_localctx, 1);
                {
                    State = 86;
                    _la = TokenStream.La(1);
                    if (_la==DOT) {
                        {
                            State = 85; Match(DOT);
                        }
                    }
